--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
-{
+{ 
+  "homepage": "https://sergijpso.github.io/notes-app",
+  "name": "notes-app",
   "dependencies": {
     "sass": "^1.58.0"
   }
 }
+
